--- a/hbase20xsqlreader/src/main/assembly/package.xml
+++ b/hbase20xsqlreader/src/main/assembly/package.xml
@@ -1,13 +1,20 @@
 <assembly
-	xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.0 http://maven.apache.org/xsd/assembly-1.1.0.xsd">
-	<id></id>
+		xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.0"
+		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.0 http://maven.apache.org/xsd/assembly-1.1.0.xsd">
+
+	<!-- ID for the assembly -->
+	<id>hbase20xsqlreader-assembly</id>
+
+	<!-- Output format as a directory -->
 	<formats>
 		<format>dir</format>
 	</formats>
+
 	<includeBaseDirectory>false</includeBaseDirectory>
+
 	<fileSets>
+		<!-- Include JSON files -->
 		<fileSet>
 			<directory>src/main/resources</directory>
 			<includes>
@@ -16,6 +23,8 @@
 			</includes>
 			<outputDirectory>plugin/reader/hbase20xsqlreader</outputDirectory>
 		</fileSet>
+
+		<!-- Include the compiled JAR file -->
 		<fileSet>
 			<directory>target/</directory>
 			<includes>
@@ -26,6 +35,7 @@
 	</fileSets>
 
 	<dependencySets>
+		<!-- Runtime dependencies -->
 		<dependencySet>
 			<useProjectArtifact>false</useProjectArtifact>
 			<outputDirectory>plugin/reader/hbase20xsqlreader/libs</outputDirectory>
